Defined combination and updated mutation